@@ -10,6 +10,8 @@ Thu Nov  2 17:29:22 CET 2006 Denis Barbier <barbier@users.sourceforge.net>
 	  src/org/jcae/mesh/amibe/algos3d/DecimateVertex.java: Reuse existing
 	Quadric3DError instances to avoid allocations.  The nodeset variable
 	is not really useful, so drop it.
+	* src/org/jcae/mesh/amibe/util/PAVLSortedTree.java (update): When
+	a node value is modified, internal map does not have to be touched.
 
 Thu Nov  2 10:06:08 CET 2006 Denis Barbier <barbier@users.sourceforge.net>
 
